// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba sobre el componente <GifExpertApp /> Debe de mostrar una lista de categorías 1`] = `
<div
  className="main__container"
>
  <div
    className="header"
  >
    <h2
      class="main__title"
    >
      GifExpertApp
    </h2>
    <div
      className="main__gif"
    >
      <img
        alt="Random Img logo"
      />
    </div>
  </div>
  <div
    className="first__bar"
  >
    <SearchBar
      setCategories={[Function]}
    />
    <DarkModeBtn />
  </div>
  <hr />
  <ol>
    <GifGrid
      category="funny"
      key="funny"
    />
    <GifGrid
      category="cool"
      key="cool"
    />
  </ol>
</div>
`;

exports[`Prueba sobre el componente <GifExpertApp /> Debe renderizar correctamente el componente 1`] = `
<div
  className="main__container"
>
  <div
    className="header"
  >
    <h2
      class="main__title"
    >
      GifExpertApp
    </h2>
    <div
      className="main__gif"
    >
      <img
        alt="Random Img logo"
      />
    </div>
  </div>
  <div
    className="first__bar"
  >
    <SearchBar
      setCategories={[Function]}
    />
    <DarkModeBtn />
  </div>
  <hr />
  <ol />
</div>
`;
